--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
 	<!-- Bootstrap -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity=" sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
+	<!-- Firebase Reference -->
+    <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+
 	<!-- jQuery -->
 	<script src="http://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+
+	<!-- Moment.js Reference -->
+ 	<script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 
 	<!-- CSS -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -32,7 +38,7 @@
 					<h3 class="panel-title"><strong>Current Train Schedule</strong></h3>
 				</div>
 				<div class="panel-body">
-					<table class="table table-striped table-hover ">
+					<table class="table table-striped table-hover" id="train-table">
 					  <thead>
 					    <tr>
 					      <th>Train Name</th>
