added clock for fun

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 	<!-- CSS -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
 </head>
 <body>
 <div class="container">
@@ -30,6 +31,12 @@
 
 	<div class="row">
 		<div class="col-lg-12">
+
+			<!-- display current time clock -->
+			<div id="clock">
+
+			</div>
+
 			<!-- Train Schedule -->
 			<div class="panel panel-default">
 				<div class="panel-heading">
