--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 		<div class="col-lg-12">
 
 			<!-- display current time clock -->
-			<div id="clock">
+<!--			<div id="clock">
 
-			</div>
+			</div> -->
 
 			<!-- Train Schedule -->
 			<div class="panel panel-default">
