edited bootstrap. final

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 </head>
-<body>
+<body style="background-color: #222222">
 <div class="container">
 
 	<!-- Jumbotron -->
@@ -58,7 +58,7 @@
 
 
 			<!-- Add Train -->
-			<div class="panel panel-default">
+			<div class="panel panel-default" id="addTrainPanel">
 				<div class="panel-heading">
 					<h3 class="panel-title"><strong>Add Train</strong></h3>
 				</div>
